=== HEAD

* Make Dataset#exists return a LiteralString (jeremyevans)

* Support multiple SQL statements in one query in the MySQL adapter (jeremyevans)

* Add stored procedure support for the MySQL and JDBC adapters (jeremyevans, krsgoss) (#252)

* Support options when altering a column's type (for changing enums, varchar size, etc.) (jeremyevans)

* Support AliasedExpressions in tables when using implicitly qualified arguments in joins (jeremyevans)

* Support Dataset#except on Oracle (jeremyevans)

* Raise errors when EXCEPT/INTERSECT is used when not supported (jeremyevans)

* Fix ordering of UNION, INTERSECT, and EXCEPT statements (jeremyevans) (#253)

* Support aliasing subselects in the Oracle adapter (jeremyevans)

* Add a subadapter for the Progress RDBMS to the ODBC adapter (:db_type=>'progress') (groveriffic) (#251)

* Make MySQL and Oracle adapters raise an Error if asked to do a SELECT DISTINCT ON (jeremyevans)

* Set standard_conforming_strings = ON by default when using PostgreSQL, turn off with Sequel::Postgres.force_standard_strings = false (jeremyevans) (#247)

* Fix Database#rename_table when using PostgreSQL (jeremyevans) (#248)

* Whether to upcase or quote identifiers can now be set separately, via Sequel.upcase_identifiers= or the :upcase_identifiers database option (jeremyevans)

* Support transactions in the ODBC adapter (dlee)

* Support multi_insert_sql and unicode string literals in MSSQL shared adapter (dlee)

* Make PostgreSQL use the default schema if parsing the schema for all tables at once, even if :schema=>nil option is used (jeremyevans)

* Make MySQL adapter not raise an error when giving an SQL::Identifier object to the schema modification methods such as create_table (jeremyevans)

* The keys of the hash returned by Database#schema without a table name are now quoted strings instead of symbols (jeremyevans)

* Make Database#schema to handle implicit schemas on all databases and multiple identifier object types (jeremyevans)
